[workspace]
members = [
    "app",
    "i18n",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
simple-icons = { path = "./simple-icons" }
simple-icons-website-i18n = { path = "./i18n" }
leptos = { version = "0.2.5", default-features = false, features = ["csr", "stable"] }
leptos_router = { version = "0.2.5", default-features = false, features = [
    "csr", "stable"
] }
console_log = "1.0.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", default-features = false, features = [
    "HtmlDocument",
] }
lazy_static = "1.4.0"

